# xglamo

./: Makefile.am  configure.ac
Xext/: xcalibrate.c
dix/: dixfonts.c  window.c
hw/kdrive/: Makefile.am
hw/kdrive/fbdev/: fbdev.c  fbinit.c
hw/kdrive/glamo/: Makefile.am  glamo-cmdq.c  glamo-draw.c  glamo-funcs.c  glamo-funcs.h  glamo-log.h  glamo-regs.h  glamo-stub.c  glamo-video.c  glamo.c  glamo.h  glamo_dma.c  glamo_dma.h  glamo_draw.c  glamo_stub.c  glamo_video.c
hw/kdrive/linux/: Makefile.am  evdev.c  keyboard.c  keyboard_xkb.c  linux.c  mouse.c
hw/kdrive/src/: kaa.c  kdrive.c  kdrive.h  kinput.c  kmode.c  koffscreen.c
randr/: randr.c
render/: renderedge.c
xfixes/: cursor.c
